# scrapper

./: Dockerfile  READMI.md  celery_app.py  docker-compose.yaml  links.py  main.py  pyproject.toml  run.py  setup.py  start_server.sh  tox.ini
app/: __init__.py  database.py  logger.py  utils.py
app/scrappers/: __init__.py  profile.py  profile_links.py  scrapper.py
app/services/: ResultsObject.py  __init__.py  auth.py  base.py  contact.py  cookies.py  driver.py  linkedin.py  profile.py  profile_scrapper.py  results.py  scrapper.py  search.py
app/tasks/: __init__.py  checker.py  contact.py  periodical_tasks.py
data/: cookies.txt
rabbitmq/: 20-rabbitmq.conf
